site design improved, fixed layout bug, disabled adding automatic source update at boot in install script, improved image optimization.

--- a/html/css/fonts.css
+++ b/html/css/fonts.css
@@ -9,7 +9,7 @@
          url('fonts/opensans-condlight-webfont.woff') format('woff'),
          url('fonts/opensans-condlight-webfont.ttf') format('truetype'),
          url('fonts/opensans-condlight-webfont.svg#open_sanscondensed_light') format('svg');
-    font-weight: normal;
+    font-weight: lighter;
     font-style: normal;
 
 }
