--- a/html/css/infoscreen.css
+++ b/html/css/infoscreen.css
@@ -6,7 +6,9 @@ html, body {
 }
 
 *{
-    font-family: 'poiret_oneregular';
+    font-family: 'josefin_sansregular';
+    /*font-family: 'poiret_oneregular';*/
+    /*font-family: 'open_sanscondensed_light';*/
 }
 
 #main {
@@ -64,23 +66,22 @@ html, body {
     background-color:rgba(250,250,250,0.5);
     overflow: hidden;
     top: 2%;
-    min-width: 47.5%;
-    max-width: 47.5%;
+    min-width: 48%;
+    max-width: 48%;
     max-height: 64%;
     margin-top: 10px;
-    margin-left: 10px;
     margin-right: 10px;
-    mmargin-bottom: 10px;
+    margin-bottom: 10px;
     border-style: solid;
     border-width: 5px;
-    border-color: rgba(0,0,0,0.45);
-    border-radius: 10px;
+    border-color: rgba(0,0,0,0.4);
+    border-radius: 20px;
 }
 
 .text {
     float: left;
     color: #333333;
-    background-color:rgba(250,250,250,0.5);
+    background-color:rgba(250,250,250,0.7);
     top: 2%;
     left: 2%;
     width: 46%;
@@ -92,20 +93,19 @@ html, body {
     padding-bottom: 10px;
     margin-top: 10px;
     margin-left: 10px;
-    margin-right: 10px;
-    font-size: 60px;
+    font-size: 65px;
     font-weight: bolder;
     line-height: 1.2;
     text-align: justify;
     border-style: solid;
     border-width: 5px;
-    border-color: rgba(0,0,0,0.45);
-    border-radius: 10px;
+    border-color: rgba(0,0,0,0.4);
+    border-radius: 20px;
 }
 
 .headline {
     color: #333333;
-    background-color:rgba(250,250,250,0.5);
+    background-color:rgba(250,250,250,0.7);
     top: 4%;
     left: 2%;
     right: 2%;
@@ -120,9 +120,9 @@ html, body {
     margin-left: 10px;
     margin-right: 10px;
     font-weight: bolder;
-    font-size: 4em;
+    font-size: 7em;
     border-style: solid;
     border-width: 5px;
-    border-color: rgba(0,0,0,0.45);
-    border-radius: 10px;
+    border-color: rgba(0,0,0,0.4);
+    border-radius: 20px;
 }​
